--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/aircraft_status.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/gcs_utils.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/units.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/globalstate.cpp
 )
 
 set(INC_DIRS ${INC_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
