--- a/src/widgets/CMakeLists.txt
+++ b/src/widgets/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/gps_classic_viewer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/flightplaneditor.ui
     ${CMAKE_CURRENT_SOURCE_DIR}/flightplaneditor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/plotter.cpp
 )
 
 set(INC_DIRS ${INC_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
