Add Intruders support.

--- a/src/widgets/map/map_items/CMakeLists.txt
+++ b/src/widgets/map/map_items/CMakeLists.txt
@@ -5,7 +5,8 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/waypoint_item.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/path_item.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/circle_item.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/aircraft_item.cpp  
+    ${CMAKE_CURRENT_SOURCE_DIR}/aircraft_item.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/intruder_item.cpp
 )
 
 set(INC_DIRS ${INC_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
