--- a/src/widgets/map/graphics_objects/CMakeLists.txt
+++ b/src/widgets/map/graphics_objects/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_aircraft.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_track.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_text.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graphics_intruder.cpp
     
 )
 
