--- a/src/widgets/CMakeLists.txt
+++ b/src/widgets/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/flightplaneditor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/plotter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/windindicator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/link_status.cpp
 )
 
 set(INC_DIRS ${INC_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
