--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,14 @@ endif()
 message("DEFAULT_APP_DATA_PATH set to ${DEFAULT_APP_DATA_PATH}")
 add_definitions(-DDEFAULT_APP_DATA_PATH="${DEFAULT_APP_DATA_PATH}")
 
+if(NOT PPRZGCS_VERSION)
+    if ("${PPRZGCS_VERSION}" STREQUAL "")
+        set(PPRZGCS_VERSION "devel")
+    endif()
+endif()
+message("PPRZGCS_VERSION set to ${PPRZGCS_VERSION}")
+add_definitions(-DPPRZGCS_VERSION="${PPRZGCS_VERSION}")
+
 find_package(Qt5 5.12 COMPONENTS Widgets Xml Network Svg TextToSpeech REQUIRED)
 find_package(IvyQt REQUIRED)
 find_package(pprzlinkQt REQUIRED)
