Make debian package launchpad compatible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ endif()
 find_package(LibXml2 REQUIRED)
 
 if(NOT DEFAULT_APP_DATA_PATH)
-    set(DEFAULT_APP_DATA_PATH "/usr/local/${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}")
+    set(DEFAULT_APP_DATA_PATH "/usr/${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}")
 endif()
 message("DEFAULT_APP_DATA_PATH set to ${DEFAULT_APP_DATA_PATH}")
 add_definitions(-DDEFAULT_APP_DATA_PATH="${DEFAULT_APP_DATA_PATH}")
