--- a/assets/CMakeLists.txt
+++ b/assets/CMakeLists.txt
@@ -19,6 +19,22 @@ ecm_install_icons(
         ${KDE_INSTALL_ICONDIR}
 )
 
+configure_file(
+    org.paparazzi.pprzgcs.appdata.xml.in
+    org.paparazzi.pprzgcs.appdata.xml
+)
+
+install(FILES ${CMAKE_BINARY_DIR}/assets/org.paparazzi.pprzgcs.appdata.xml
+    DESTINATION ${KDE_INSTALL_METAINFODIR}
+)
+
+
+install(FILES pprzgcs.svg
+        DESTINATION ${KDE_INSTALL_FULL_ICONDIR}/hicolor/scalable/apps
+)
+
+
 install(FILES "org.paparazzi.pprzgcs.desktop"
-            DESTINATION ${KDE_INSTALL_APPDIR}
-    )
+        DESTINATION ${KDE_INSTALL_APPDIR}
+)
+
