[MapWidget] Display arrow if the drone is outside the view.

--- a/src/widgets/map/graphics_objects/CMakeLists.txt
+++ b/src/widgets/map/graphics_objects/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_track.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_text.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_intruder.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graphics_group.cpp
     
 )
 
