WIP! Start python plugins.

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -11,6 +11,7 @@ if(SPEECH)
         ${CMAKE_CURRENT_SOURCE_DIR}/AircraftManager.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/units.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/watcher.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/python_plugins.cpp
         )
 endif()
 
