New map item: quiver

--- a/src/widgets/map/graphics_objects/CMakeLists.txt
+++ b/src/widgets/map/graphics_objects/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_intruder.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_group.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphics_icon.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graphics_quiver.cpp
     
 )
 
