GVF PARAMETRIC altitude colorbar added to GVF Viewer

--- a/src/widgets/basics/CMakeLists.txt
+++ b/src/widgets/basics/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/mbpushbutton.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/lock_button.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphwidget.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/colorbar.cpp
 )
 
 set(INC_DIRS ${INC_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
