Add libxml2 to AppImage libs.

--- a/appimage-amd64.yml
+++ b/appimage-amd64.yml
@@ -40,6 +40,7 @@ AppDir:
       - libsqlite3-0
       - libproj15
       - libzip5
+      - libxml2
       - ivy-qt
     exclude:
       - "*dbgsym*"
