Add Chat widget.

--- a/src/widgets/basics/CMakeLists.txt
+++ b/src/widgets/basics/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/lock_button.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/graphwidget.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/colorbar.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/chatbubble.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/chatbubble.ui
 )
 
 set(INC_DIRS ${INC_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
