--- a/src/widgets/CMakeLists.txt
+++ b/src/widgets/CMakeLists.txt
@@ -21,6 +21,8 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/windindicator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/link_status.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/gvf_viewer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/chat.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/chat.ui
 )
 
 set(INC_DIRS ${INC_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
