--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,6 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-VERSION=1.0.9
-
 pprzlinkqt_src=ext/pprzlinkQt/
 pprzlinkqt_build=build/ext/pprzlinkQt
 install_prefix=build/install
@@ -17,7 +15,7 @@ override_dh_auto_configure:
 	cmake -S $(pprzlinkqt_src) -B $(pprzlinkqt_build) -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$(install_prefix)
 	cmake --build $(pprzlinkqt_build)
 	cmake --install $(pprzlinkqt_build)
-	cmake -S . -B build/pprzgcs -DCMAKE_INSTALL_PREFIX=$(DESTDIR)$(prefix) -DCMAKE_PREFIX_PATH=$(install_prefix) -DCMAKE_BUILD_TYPE=Release -DPPRZGCS_VERSION=$(VERSION)
+	cmake -S . -B build/pprzgcs -DCMAKE_INSTALL_PREFIX=$(DESTDIR)$(prefix) -DCMAKE_PREFIX_PATH=$(install_prefix) -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
 override_dh_auto_build:
 
