--- a/assets/org.paparazzi.pprzgcs.desktop
+++ b/assets/org.paparazzi.pprzgcs.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=PprzGCS
 Comment=GCS for PaparazziUAV
-Exec=/usr/bin/pprzgcs
+Exec=pprzgcs
 Terminal=false
 Type=Application
 Icon=pprzgcs
